compiler/testData/diagnostics/tests/script/AccessForwardDeclarationInScript.kts
konst x = <!UNINITIALIZED_VARIABLE!>y<!>

konst y = 2
